--- a/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
+++ b/trunk/testing/projects/VS2010/QEUnitTests/Tools/Tools.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QVector2_Test.cpp">
       <Filter>Tests\Math</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\tests\unit\testmodule_tools\QScalingMatrix3x3_Test.cpp">
+      <Filter>Tests\Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\..\testsystem\CommonConfigDefinitions.h">
@@ -138,6 +141,9 @@
       <Filter>Tests\Math</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QRotationMatrix3x3WhiteBox.h">
+      <Filter>Tests\Math</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\tests\unit\testmodule_tools\QScalingMatrix3x3WhiteBox.h">
       <Filter>Tests\Math</Filter>
     </ClInclude>
   </ItemGroup>
