--- a/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
+++ b/trunk/projects/CodeBlocks10/QuimeraEngine/Core/Core.cbp
@@ -9,25 +9,27 @@
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
-				<Option output="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineCore.a" prefix_auto="0" extension_auto="0" />
+				<Option output="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineCore.a" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
-				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugLinux32SharedrtStatic" />
+				<Option object_output="../../../../garbage/CodeBlocks10/DebugLinux32SharedrtStatic" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-m32" />
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
-					<Add directory="..\..\..\..\3rdparty\Boost\bin\Linux32\DebugSharedrtStatic" />
+					<Add option="-m32" />
+					<Add directory="../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic" />
 				</Linker>
 			</Target>
 			<Target title="DebugWin32SharedrtStatic">
 				<Option platforms="Windows;" />
-				<Option output="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCore.lib" prefix_auto="0" extension_auto="0" />
+				<Option output="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCore.lib" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="" />
-				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugWin32SharedrtStatic" />
+				<Option object_output="../../../../garbage/CodeBlocks10/DebugWin32SharedrtStatic" />
 				<Option type="2" />
 				<Option compiler="gcc" />
 				<Option createDefFile="1" />
@@ -36,7 +38,7 @@
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
-					<Add directory="..\..\..\..\3rdparty\Boost\bin\Win32\DebugSharedrtStatic" />
+					<Add directory="../../../../3rdparty/Boost/bin/Win32/DebugSharedrtStatic" />
 				</Linker>
 			</Target>
 		</Build>
@@ -48,14 +50,14 @@
 			<Add option="-Wmissing-include-dirs" />
 			<Add option="-Wswitch-default" />
 			<Add option="-Wall" />
-			<Add directory="..\..\..\..\headers" />
-			<Add directory="..\..\..\..\3rdparty\Boost\include" />
+			<Add directory="../../../../headers" />
+			<Add directory="../../../../3rdparty/Boost/include" />
 		</Compiler>
-		<Unit filename="..\..\..\..\headers\Configuration.h" />
-		<Unit filename="..\..\..\..\headers\ExternalDefinitions.h" />
-		<Unit filename="..\..\..\..\headers\InternalDefinitions.h" />
-		<Unit filename="..\..\..\..\headers\QConvertible.h" />
-		<Unit filename="..\..\..\..\source\Prueba.cpp" />
+		<Unit filename="../../../../headers/Configuration.h" />
+		<Unit filename="../../../../headers/ExternalDefinitions.h" />
+		<Unit filename="../../../../headers/InternalDefinitions.h" />
+		<Unit filename="../../../../headers/QConvertible.h" />
+		<Unit filename="../../../../source/Prueba.cpp" />
 		<Extensions>
 			<code_completion />
 			<debugger />
