--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -5,13 +5,13 @@
 		<Option title="Tools" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
-		<Option virtualFolders="TestSystem (shared)/;Tests/;Tests/Math/;Tests/DataTypes/;" />
+		<Option virtualFolders="TestSystem (shared)\;Tests\;Tests\Math\;Tests\DataTypes\;Tests\General\;" />
 		<Build>
 			<Target title="DebugLinux32SharedrtStatic">
 				<Option platforms="Unix;" />
-				<Option output="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/Unit_TestModule_Tools" prefix_auto="0" extension_auto="1" />
-				<Option working_dir="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
-				<Option object_output="../../../../garbage/CodeBlocks10/DebugLinux32SharedrtStatic" />
+				<Option output="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\Unit_TestModule_Tools" prefix_auto="0" extension_auto="1" />
+				<Option working_dir="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic" />
+				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugLinux32SharedrtStatic" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -21,11 +21,11 @@
 				</Compiler>
 				<Linker>
 					<Add option="-m32" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineTools.a" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineSystem.a" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic/QuimeraEngineCore.a" />
-					<Add library="../../../../../3rdparty/Boost/bin/Linux32/DebugSharedrtStatic/libboost_unit_test_framework.a" />
-					<Add directory="../../../../bin/CodeBlocks10/DebugLinux32SharedrtStatic" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineTools.a" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineSystem.a" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic\QuimeraEngineCore.a" />
+					<Add library="..\..\..\..\..\3rdparty\Boost\bin\Linux32\DebugSharedrtStatic\libboost_unit_test_framework.a" />
+					<Add directory="..\..\..\..\bin\CodeBlocks10\DebugLinux32SharedrtStatic" />
 				</Linker>
 				<ExtraCommands>
 					<Add after='cp &quot;$(TARGET_OUTPUT_DIR)../../TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
@@ -33,9 +33,9 @@
 			</Target>
 			<Target title="DebugWin32SharedrtStatic">
 				<Option platforms="Windows;" />
-				<Option output="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/Unit_TestModule_Tools" prefix_auto="0" extension_auto="1" />
-				<Option working_dir="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic" />
-				<Option object_output="../../../../garbage/CodeBlocks10/DebugWin32SharedrtStatic" />
+				<Option output="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\Unit_TestModule_Tools" prefix_auto="0" extension_auto="1" />
+				<Option working_dir="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic" />
+				<Option object_output="..\..\..\..\garbage\CodeBlocks10\DebugWin32SharedrtStatic" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
@@ -43,11 +43,11 @@
 					<Add option="-D_DEBUG" />
 				</Compiler>
 				<Linker>
-					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineCore.lib" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineSystem.lib" />
-					<Add library="../../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic/QuimeraEngineTools.lib" />
-					<Add library="../../../../../3rdparty/Boost/bin/Win32/DebugSharedrtStatic/libboost_unit_test_framework-mgw44-mt-d-1_46_1.a" />
-					<Add directory="../../../../bin/CodeBlocks10/DebugWin32SharedrtStatic" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineCore.lib" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineSystem.lib" />
+					<Add library="..\..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic\QuimeraEngineTools.lib" />
+					<Add library="..\..\..\..\..\3rdparty\Boost\bin\Win32\DebugSharedrtStatic\libboost_unit_test_framework-mgw44-mt-d-1_46_1.a" />
+					<Add directory="..\..\..\..\bin\CodeBlocks10\DebugWin32SharedrtStatic" />
 				</Linker>
 				<ExtraCommands>
 					<Add after='cmd /c copy &quot;$(TARGET_OUTPUT_DIR)..\..\TestConfig.txt&quot; &quot;$(TARGET_OUTPUT_DIR)&quot;' />
@@ -64,165 +64,171 @@
 			<Add option="-Wswitch-default" />
 			<Add option="-Wall" />
 			<Add option="-DQE_ASSERT_THROWS_EXCEPTION" />
-			<Add directory="../../../../../headers" />
-			<Add directory="../../../../../3rdparty/Boost/include" />
-			<Add directory="../../../../tests/unit" />
+			<Add directory="..\..\..\..\..\headers" />
+			<Add directory="..\..\..\..\..\3rdparty\Boost\include" />
+			<Add directory="..\..\..\..\tests\unit" />
 		</Compiler>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseDualQuaternion_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_core\EQEnumerationMock.h">
+			<Option virtualFolder="Tests\General\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseMatrix2x2_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_core\EQEnumeration_Test.cpp">
+			<Option virtualFolder="Tests\General\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseMatrix3x3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseDualQuaternion_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseMatrix3x4_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseMatrix2x2_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseMatrix4x3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseMatrix3x3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseMatrix4x4_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseMatrix3x4_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseQuaternion_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseMatrix4x3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseVector2_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseMatrix4x4_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseVector3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseQuaternion_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QBaseVector4_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseVector2_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QDualQuaternionWhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseVector3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QDualQuaternion_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QBaseVector4_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QMatrix2x2_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QDualQuaternionWhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QMatrix3x3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QDualQuaternion_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QMatrix3x4_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QMatrix2x2_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QMatrix4x3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QMatrix3x3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QMatrix4x4_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QMatrix3x4_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QQuaternionWhitebox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QMatrix4x3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QQuaternion_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QMatrix4x4_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QRotationMatrix3x3WhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuaternionWhitebox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QRotationMatrix3x3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QQuaternion_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QScalingMatrix3x3WhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QRotationMatrix3x3WhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QScalingMatrix3x3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QRotationMatrix3x3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QSpaceConversionMatrixWhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QScalingMatrix3x3WhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QSpaceConversionMatrix_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QScalingMatrix3x3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QTransformationMatrix3x3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QSpaceConversionMatrixWhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QTransformationMatrixWhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QSpaceConversionMatrix_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QTransformationMatrix_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QTransformationMatrix3x3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QTranslationMatrixWhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QTransformationMatrixWhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QTranslationMatrix_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QTransformationMatrix_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QVector2_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QTranslationMatrixWhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QVector3WhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QTranslationMatrix_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QVector3_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QVector2_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QVector4WhiteBox.h">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QVector3WhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/QVector4_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QVector3_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/SQAngle_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QVector4WhiteBox.h">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/SQFloat_Test.cpp">
-			<Option virtualFolder="Tests/Math/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\QVector4_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/SQVF32_Test.cpp">
-			<Option virtualFolder="Tests/DataTypes/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQAngle_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../tests/unit/testmodule_tools/TestModule_Tools.cpp">
-			<Option virtualFolder="Tests/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQFloat_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/CommonConfigDefinitions.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQVF32_Test.cpp">
+			<Option virtualFolder="Tests\DataTypes\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/EQTestType.cpp">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\TestModule_Tools.cpp">
+			<Option virtualFolder="Tests\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/EQTestType.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\CommonConfigDefinitions.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/QCommonTestConfig.cpp">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\EQTestType.cpp">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/QCommonTestConfig.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\EQTestType.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/QPerformanceTestModuleBase.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\QCommonTestConfig.cpp">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/QSimpleConfigLoader.cpp">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\QCommonTestConfig.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/QSimpleConfigLoader.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\QPerformanceTestModuleBase.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/QUnitTestModuleBase.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\QSimpleConfigLoader.cpp">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/QuimeraEngineFixtures.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\QSimpleConfigLoader.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/TestingExternalDefinitions.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\QUnitTestModuleBase.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/TestingHelperDefinitions.h">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\QuimeraEngineFixtures.h">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
-		<Unit filename="../../../../testsystem/UnitTestTemplate.txt">
-			<Option virtualFolder="TestSystem (shared)/" />
+		<Unit filename="..\..\..\..\testsystem\TestingExternalDefinitions.h">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\TestingHelperDefinitions.h">
+			<Option virtualFolder="TestSystem (shared)\" />
+		</Unit>
+		<Unit filename="..\..\..\..\testsystem\UnitTestTemplate.txt">
+			<Option virtualFolder="TestSystem (shared)\" />
 		</Unit>
 		<Extensions>
 			<code_completion />
