272 - Unit tests: SQPoint Done. Pending to be reviewed. Added assertions to all the methods, in order to check if input array is null. Fixed an error in the TransformWithPivot method that receives a QTransformationMatrix class and a QVector4 array. The W component of the input pivot was being subtracted to the point array's. Makefiles updated and fixed.

--- a/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
+++ b/trunk/testing/projects/CodeBlocks10/QEUnitTests/Tools/Tools.cbp
@@ -185,6 +185,9 @@
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQFloat_Test.cpp">
 			<Option virtualFolder="Tests\Math\" />
 		</Unit>
+		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQPoint_Test.cpp">
+			<Option virtualFolder="Tests\Math\" />
+		</Unit>
 		<Unit filename="..\..\..\..\tests\unit\testmodule_tools\SQVF32_Test.cpp">
 			<Option virtualFolder="Tests\DataTypes\" />
 		</Unit>
